<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.slider.Slider
        android:id="@+id/sizeOfBrushSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/slider"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/rateOfRetouchingSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/slider"
        android:stepSize="0.01"
        android:valueFrom="0.9"
        android:valueTo="1."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeOfBrushSlider" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="261dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Size_of_brush"
        android:textAlignment="gravity"
        android:textColor="#0B0A0A"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sizeOfBrushSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="261dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Retouching_factor"
        android:textAlignment="gravity"
        android:textColor="#0B0A0A"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/rateOfRetouchingSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>